# python-cli-starter

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
docker/dev/: Dockerfile
src/cli/: __main__.py  dns_lookup_cmd.py  main.py  options.py  output_formatter.py
src/dns/: dns_lookup.py
tests/cli/: test_cli.py
tests/dns/: test_dns_lookup.py
