[tool.poetry]
name = "cli-starter"
version = "0.1.0"
description = "CLI Starter"
authors = ["Cameron Xie"]
readme = "README.md"
packages = [
    { include = "cli", from = "src" },
    { include = "dns", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
mypy = "^1.9.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
dnskit = "cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -s -x -v --cov=src"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
src = ["src"]
line-length = 120
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "ERA", # flake8-eradicate/eradicate
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "PGH", # pygrep
    "PIE", # flake8-pie
    "PL", # Pylint
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]
ignore = [
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D211", # No blank lines allowed before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.mypy]
mypy_path = "./src"
exclude = ["tests"]
strict = true
show_error_codes = true
pretty = true
local_partial_types = true
warn_unreachable = true
